feat: support picked fields
